fidoconfig 0.9
--------------

----- cvs ci ------
Mon Jun 28  16:43:00
Fedor:
+ Added compiling fecfg2fconf (fastecho.cfg -> fidoconfig) for Linux

----- cvs ci ------
Sun Jun 27  15:02:00
Fedor:
+ Added copy_file() function in common.c
* Fixed problem with compiling for OS/2 and Watcom

----- cvs ci ------
Thu Jun 24 17:24:42 CEST 1999
mtt:
* fixed tparser while displaying forwardPkts 

----- cvs ci ------
Tue Jun 22 22:10:45 CEST 1999
mtt:
* version number updated
	
----- cvs ci ------
Thu Jun 17 12:38:26 NOVST 1999
max:
+ add tokens defArcmailSize and arcmailSize

----- cvs ci ------
Wed Jun  16 18:20:00
Fedor:
* change token AutoCreateFile to AutoAreaCreateFile (from link)
+ added token AutoFileCreateFile 
* change token AutoCreateDefaults to AutoAreaCreateDefaults
* moved global AutoFileCreateDefaults to link
  Do it for used htick in future

----- cvs ci ------
Tue Jun  8 20:53:03
Fedor:
+ added token AutoPause for links

fidoconfig 0.8
(released on Mon Jun  7 22:37:09 CEST 1999)
--------------

----- cvs ci ------
Mon Jun  7 20:43:29 CEST 1999
mtt:
* fixed some null-pointer issues.

----- cvs ci ------
Sun May 30 22:26:26 CEST 1999	
mtt:
* fixed a bug in (2)

----- cvs ci ------
Sun May 23  18:50:01
Fedor:
+ added tokens RemoteRobotName - Areafix (default) or another
  and fRequestFromUpLink - link's access for Forward Requests.

----- cvs ci ------
Tue May 18 17:54:01 CEST 1999 
mtt:
* added fconf2squish which can be used for squish config based programs
  like sqLink
* (2) fidoconfig now adds .0 to the pattern of a route when there is no . and no * in it.
	
----- cvs ci ------
Sun May 16 23:26:39 CEST 1999
mtt:
+ fidoInst for new config adapted

----- cvs ci ------
Wed May 12 13:05:10 NOVST 1999
Max:
+ update documentation

----- cvs ci ------
Tue May 11 21:55:03 CEST 1999
mtt:
+ netmailarea can now also be netarea, and if you have $ in your squish area definition, 
  golded may read the fidoconfig file directly. (kolya)
	
fidoconfig 0.7